# music-assistant-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
src/mass_mcp/: __init__.py  __main__.py  server.py
src/mass_mcp/client/: __init__.py
src/mass_mcp/tools/: tools_players.py  tools_queues.py  tools_search.py  tools_server.py
src/music_assistant_mcp/: __main__.py  config.py  server.py
src/music_assistant_mcp/client/: __init__.py  api_client.py
src/music_assistant_mcp/tools/: __init__.py  tools_favorites.py  tools_playlists.py
